Add docker-compose.yml and adjust dockerfile to use Java 17